Fix contrast issues and add skip links to page two and three

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ nav ul {
 }
 
 nav a:hover {
-  background-color: #e5e5e5;
+  background-color: #d3d3d3;
 }
 
 nav a {
@@ -143,7 +143,7 @@ img {
 }
 
 .btn {
-  color: #fff;
+  color: #000;
   padding: .8rem;
   font-size: 1rem;
   text-transform: uppercase;
@@ -152,7 +152,7 @@ img {
   display: block;
   width: 100%;
   cursor: crosshair;
-  border: 1px solid rgba(255, 255, 255, .2);
+  border: 1px solid black;
   background: transparent;
 }
 
@@ -315,7 +315,7 @@ img {
 }
 
 .card-title {
-  color: #fff;
+  color: #000;
   font-size: 1.1rem;
   font-weight: bold;
   letter-spacing: 1px;
@@ -324,7 +324,7 @@ img {
 }
 
 .card-text {
-  color: #fff;
+  color: #000;
   font-size: .875rem;
   line-height: 1.5;
   margin-bottom: 1.25rem;
